--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div> <!--close heroTextBottom class-->
                 <div class="heroButton">
                     <a href="project.html" class="button">View My projects</a>
-                </div>
+                </div> <!--close heroButton class-->
             </div> <!--close heroText class-->
         </section>
 
