--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="stylesheet" href="nav.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Aladdin's Portfolio</title>
 </head>
 <body>
@@ -40,7 +41,7 @@
                 <div class="heroTextTop">
                     <h3>Hi!</h3>
                     <h3>My Name is</h3>
-                    <h1>Aladdin</h1>
+                    <h1 class="heroName"><em>Aladdin</em></h1>
                 </div> <!--close heroTextTop class-->
                 <div class="heroTextBottom"> 
                     <h4>Welcome to my</h4>
@@ -48,12 +49,11 @@
                     <h4>Student Portfolio</h4>
                 </div> <!--close heroTextBottom class-->
                 <div class="heroButton">
-                    <a href="project.html" class="button">View My projects</a>
+                    <a href="projects.html" class="button">View My projects</a>
                 </div> <!--close heroButton class-->
             </div> <!--close heroText class-->
         </section>
 
     <script type="text/javascript" src="script.js"></script>
-    
 </body>
 </html>
