--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="stylesheet" href="nav.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Aladdin's Portfolio</title>
 </head>
 <body>
@@ -61,14 +60,12 @@
                 <li class="divider">|</li>
                 <li><a href="projects.html">Projects</a></li>
                 <li class="divider">|</li>
-                <li><a href="Blog.html">Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li class="divider">|</li>
                 <li><a href="aboutMe.html">About Me</a></li>
             </ul>
         </footer>
         
-
-
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
